Bug fix: .tooltip text inside .progress-description doesn't wrap properly

--- a/less/progress-bars.less
+++ b/less/progress-bars.less
@@ -84,4 +84,7 @@
   .fa, .pficon {
     margin-right: 3px;
   }
+  .tooltip {
+    white-space: normal;
+  }
 }
